<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modificar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_modificar_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_name"
                android:textColor="#000000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_modificar_name"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_modificar_name"
                android:hint="@string/write_here"/>

            <TextView
                android:id="@+id/tv_modificar_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_surname"
                android:textColor="#000000"
                android:layout_below="@id/et_modificar_name"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_modificar_surname"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_modificar_surname"
                android:hint="@string/write_here"/>

            <TextView
                android:id="@+id/tv_modificar_dni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_dni"
                android:textColor="#000000"
                android:layout_below="@id/et_modificar_surname"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_modificar_dni"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_modificar_dni"
                android:hint="@string/write_here"/>

            <TextView
                android:id="@+id/tv_modificar_fecha_nacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_modificar_dni"
                android:text="@string/birthdate"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_modificar_fecha_nacimiento"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="dd mm yyyy"
                android:textAlignment="center"
                android:layout_alignParentRight="true"
                android:layout_below="@id/et_modificar_dni"/>

            <RadioGroup
                android:layout_marginTop="20dp"
                android:id="@+id/rg_modificar_genero"
                android:layout_below="@id/tv_modificar_fecha_nacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/rb_modificar_hombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/man"/>

                <RadioButton android:id="@+id/rb_modificar_mujer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/woman"/>

                <RadioButton android:id="@+id/rb_modificar_otro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"/>

            </RadioGroup>

            <CheckBox
                android:id="@+id/cb_modificar_data_consent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_consent"
                android:layout_below="@id/rg_modificar_genero"/>

            <Spinner
                android:id="@+id/s_modificar_estudios"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/cb_modificar_data_consent"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/bt_modificar_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/s_modificar_estudios"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:text="@string/accept"
                android:onClick="aceptar"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>